# ttreeprocessor

./: CMakeLists.txt  LICENSE
src/: Backports.h  Helpers.h  LambdaHelpers.h  RootHelpers.h  TTreeProcessor.h  TTreeProcessorKernels.h  VcHelpers.h  test.cxx
src/internal/: GeneratedKernels.h
src/test/: CMakeLists.txt  MainEvent.cxx  MainSillyStruct.cxx  testBackports.cxx  testHelpers.cxx  testProcessor.cxx  testProcessorParallel.cxx  testProcessorSimple.cxx  testProcessorVectorized.cxx  testRootHelpers.cxx  testVcHelpers.cxx
